# immich-bridge

./: .dockerignore  .env.example  .gitignore  .woodpecker.yml  AGENTS.md  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
deploy/kubernetes/immich-bridge/: README.md  resources.yaml
docs/: native-fs-api.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.tsx  styles.css
frontend/src/ui/: App.tsx
macos/: README.md
macos/ImmichFS/: README.md
macos/ImmichFS/ImmichFS.xcodeproj/: project.pbxproj
macos/ImmichFS/ImmichFS.xcodeproj/xcshareddata/xcschemes/: ImmichFS.xcscheme
macos/ImmichFS/ImmichFSApp/: AdminAPI.swift  AdminModels.swift  ImmichFSApp.swift  Info.plist  KeychainStore.swift  SettingsView.swift
macos/ImmichFS/ImmichFSFileSystem/: FileSystemExtension.swift  ImmichFSFileSystem.swift  Info.plist  StaticTree.swift
scripts/: diagnose_performance.py  entrypoint.py
src/immich_bridge/: __init__.py  admin_store.py  app.py  authz.py  blob_cache.py  cache.py  config.py  fs_model.py  fs_service.py  immich_auth.py  immich_client.py  logging.py  main.py  observability.py  share_auth.py  webdav_auth.py  webdav_provider.py  webdav_server.py
src/immich_bridge/api/: admin.py  auth.py  health.py
tests/: test_admin_api.py  test_blob_cache.py  test_fs_service.py  test_health_api.py  test_immich_client.py  test_webdav_auth.py  test_webdav_provider.py  test_webdav_server.py  test_webdav_writes_integration.py
windows/: README.md
