[project]
name = "immich-bridge"
version = "0.1.0"
description = "Bridge service for Immich libraries"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "wsgidav>=4.3.0",
    "cheroot>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/immich_bridge"]
artifacts = ["src/immich_bridge/admin_static/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = false
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "cheroot.*",
    "redis.*",
    "wsgidav.*",
]
ignore_missing_imports = true
